--- a/frontend-client/src/index.css
+++ b/frontend-client/src/index.css
@@ -8,7 +8,7 @@ html{
 }
 
 body {
-  font-family: "Inter" ;
+  font-family: "Inter-normal" ;
 }
 
 * {
@@ -17,8 +17,23 @@ body {
 }
 
 @font-face {
-  font-family: "Inter";
-  src: url('./assets/font/static/Inter_18pt-Black.ttf')
+  font-family: "Inter-normal";
+  src: url('./assets/font/static/Inter_18pt-Regular.ttf')
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter-bold";
+  src: url('./assets/font/static/Inter_18pt-Bold.ttf')
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter-extrabold";
+  src: url('./assets/font/static/Inter_18pt-ExtraBold.ttf')
     format("truetype");
   font-weight: normal;
   font-style: normal;
