--- a/frontend-admin/src/pages/OfflineTicketBooking/oStyle.css
+++ b/frontend-admin/src/pages/OfflineTicketBooking/oStyle.css
@@ -2,6 +2,7 @@
 .OfflineTicketPage{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 1000px;
 }
 .OfflineTicketPage .filtering {
     display: grid;
