--- a/frontend-admin/src/index.css
+++ b/frontend-admin/src/index.css
@@ -42,3 +42,29 @@ h3 {
     border-image: initial;
     border-radius: 0px;
 }
+
+.Login_Dropdown{
+    position: absolute;
+    width:100px;
+    top:100%;
+    display: none;
+    flex-direction: column;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-size: 16px;
+    background-color: white;
+}
+.sc_dropdown{
+    display: inline-block;
+    position: relative;
+}
+.sc_dropdown:hover .Login_Dropdown{
+    display: flex;
+}
+.abc_label{
+    padding: 5px;
+}
+.abc_label:hover{
+    cursor: pointer;
+    background-color: #0969DA;
+    color: white;
+}
