--- a/frontend-admin/src/pages/CreateRoom/style.css
+++ b/frontend-admin/src/pages/CreateRoom/style.css
@@ -291,6 +291,7 @@
 .confirmBar{
   position: fixed;
   bottom: 0;
+  left: 0;
   padding: 10px;
   padding-right: 20px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
